# ZJBrainSciencePlatformTasker

./: .gitignore  README.md  pyproject.toml  start-worker.py
alembic/: env.py
alembic/sql/: create_all.sql
alembic/sql/downgrade/: bb595b58bf66_base.sql
alembic/sql/upgrade/: base_bb595b58bf66.sql
alembic/versions/: 383fd5a1b634_create_task_tables.py  bb595b58bf66_create_task_tables.py
deploy/: dev.docker-compose.yaml
src/zjbs_tasker/: __init__.py  api.py  db.py  main.py  model.py  new_worker.py  server.py  settings.py  util.py  worker.py
src/zjbs_tasker/api/: __init__.py  interpreter.py  task.py  task_template.py  template.py
test/: __init__.py  conftest.py  test_worker.py
