[project]
name = "zjbs-tasker"
version = "0.1.0"
description = "ZJBrainSciencePlatform Tasker"
authors = [
    { name = "蔡涛", email = "caitao@zhejianglab.com" }
]
dependencies = [
    "fastapi>=0.103.1",
    "uvicorn>=0.23.2",
    "ormar[postgresql]>=0.12.2",
    "python-multipart>=0.0.6",
    "loguru>=0.7.2",
    "fastapi-crudrouter>=0.8.6",
    "rq>=1.15.1",
    "httpx>=0.25.0",
    "zjbs-file-client==0.4.0",
]
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "GPL-3.0-only" }
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=23.2.1",
    "setuptools>=68.2.2",
    "wheel>=0.41.2",
    "alembic[tz]>=1.12.0",
    "ipython>=8.12.2",
    "rich>=13.5.3",
    "black>=23.9.1",
    "isort>=5.12.0",
]

[tool.hatch.metadata]
allow-direct-references = true
